objects/ASI_CRM_Visit_Frequency_Thresholds__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_MY_Action_Coding__c</fullName>
        <label>Action Coding</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Prioritization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Prioritization</label>
        <referenceTo>ASI_CRM_PROS_OutletPrioritization__c</referenceTo>
        <relationshipLabel>Visit Frequency Thresholds</relationshipLabel>
        <relationshipName>Visit_Frequency_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Frequency__c</fullName>
        <label>Visit Frequency (month)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Visit Frequency Thresholds</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VFT-{0000}</displayFormat>
        <label>Visit Frequency Thresholds Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Frequency Thresholds</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Visit_Frequency_Thresholds</fullName>
        <active>true</active>
        <label>ASI CRM MY Visit Frequency Thresholds</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>